--- a/packaging.html
+++ b/packaging.html
@@ -9,24 +9,24 @@
 	<div id="header">
 		<div class="header-wrap">
 			<div class="header-left">
-				<a href="#"><img src="img/header-left.gif" alt=""></a>
+				<a href="production_problem.html"><img src="img/header-left.gif" alt=""></a>
 			</div>
 			<div class="header-menu">
 				<ul>
-					<li><a href="#"><i>Tmall</i> 商城</a></li>
-					<li><a href="#">黄酒</a></li>
-					<li><a href="#">红酒</a></li>
-					<li><a href="#">白酒</a></li>
-					<li><a href="#">果汁</a></li>
-					<li><a href="#">水</a></li>
+					<li><a href="online_store.html"><i>Tmall</i> 商城</a></li>
+					<li><a href="production3.html">黄酒</a></li>
+					<li><a href="production3.html">红酒</a></li>
+					<li><a href="production3.html">白酒</a></li>
+					<li><a href="production3.html">果汁</a></li>
+					<li><a href="production3.html">水</a></li>
 				</ul>
 			</div>
 			<div class="header-bar">
 					<dl>
-						<dd><a href="#">易乐众品</a></dd>
-						<dd><a href="#">易乐包装</a></dd>
-						<dd><a href="#">众品伙伴</a></dd>
-						<dd><a href="#">加入众品</a></dd>
+						<dd><a href="marketing.html">易乐众品</a></dd>
+						<dd><a href="packaging.html">易乐包装</a></dd>
+						<dd><a href="production_problem.html">众品伙伴</a></dd>
+						<dd><a href="join_us.html">加入众品</a></dd>
 					</dl>
 			</div>
 		</div>
@@ -96,15 +96,15 @@
 			<div class="footer-top-left">
 				<p>
 					<a href="#">>关注易乐众品</a>
-					<span><a href="">加入收藏</a></span>
+					<span><a href="#">加入收藏</a></span>
 				</p>
 				<p id="map">先下购买地图(0575-88121795)</p>
 			</div>
 			<ul>
-				<li><a href="#">众品与地球</a></li>
-				<li><a href="#">众品咨询</a></li>
-				<li><a href="#">网络地图</a></li>
-				<li><a href="#">联系我们</a></li>
+				<li><a href="contact.html">众品与地球</a></li>
+				<li><a href="news.html">众品咨询</a></li>
+				<li><a href="production_problem.html">网络地图</a></li>
+				<li><a href="call_me.html">联系我们</a></li>
 			</ul>
 		</div>
 		<p class="footer-bottom">Copyright &copy2013 易乐众品 All right reserved 技术支持：博采互动</p>
