--- a/index.html
+++ b/index.html
@@ -9,68 +9,66 @@
 	<div id="header">
 		<div class="header-wrap">
 			<div class="header-left">
-				<a href="#"><img src="img/header-left.gif" alt=""></a>
+				<a href="production_problem.html"><img src="img/header-left.gif" alt=""></a>
 			</div>
 			<div class="header-menu">
 				<ul>
-					<li><a href="#"><i>Tmall</i> 商城</a></li>
-					<li><a href="#">黄酒</a></li>
-					<li><a href="#">红酒</a></li>
-					<li><a href="#">白酒</a></li>
-					<li><a href="#">果汁</a></li>
-					<li><a href="#">水</a></li>
+					<li><a href="online_store.html"><i>Tmall</i> 商城</a></li>
+					<li><a href="production3.html">黄酒</a></li>
+					<li><a href="production3.html">红酒</a></li>
+					<li><a href="production3.html">白酒</a></li>
+					<li><a href="production3.html">果汁</a></li>
+					<li><a href="production3.html">水</a></li>
 				</ul>
 			</div>
 			<div class="header-bar">
 					<dl>
-						<dd><a href="#">易乐众品</a></dd>
-						<dd><a href="#">易乐包装</a></dd>
-						<dd><a href="#">众品伙伴</a></dd>
-						<dd><a href="#">加入众品</a></dd>
+						<dd><a href="marketing.html">易乐众品</a></dd>
+						<dd><a href="packaging.html">易乐包装</a></dd>
+						<dd><a href="production_problem.html">众品伙伴</a></dd>
+						<dd><a href="join_us.html">加入众品</a></dd>
 					</dl>
 			</div>
 		</div>
 	</div>
-	<h2 id="headline">众品资讯</h2>
-	<div id="news">
-		<div class="news-top">
-			<a href=""><img src="img/news-img.gif" alt=""></a>
-			<div class="news-top2">
-				<h2>smurfit kappa bag in box 参展烟台国际葡萄酒设备技术暨葡萄、果蔬种植展</h2>
-				<p>葡萄-葡萄酒和果蔬领域的全面展示（葡萄种植设备、酒窖设备和用品、酿酒学、培植和酿酒产品、灌装设备、葡萄酒营销、灌溉设备、葡萄苗、葡萄树、果蔬包装、测量设备、软件等）高资质的观众（葡萄和果蔬领域的种植者/生产商、分销商、酒类学家、酒窖主、农作物经理、特许经营商、学者和学生、推荐者、机构、记者等）</p>
-				<span>2013-6-23</span>
-			</div>
+	<h2 id="headline">易乐众品</h2>
+	<div id="marketing">
+		<img src="img/marketing.gif" alt="">
+		<div class="marketing-main">
+			<ul>
+				<li>
+					<div class="marketing-main-top">
+						<h2>整合优势资源，采购、生产和销售全球优质液态饮品的创新型企业。</h2>
+						<p>Integration of advantageous resources, procurement, production and sale of high-quality liquid beverages globally innovative companies.</p>
+					</div>
+					<div class="marketing-main-bottom">
+						<div class="marketing-main-bottom1">
+							<img src="img/bottoml.gif" alt="">
+						</div>
+						<p>易乐众品是一家以绿色环保的易乐包装（bag in box）为基础，整合全球一流产区的优势资源，采购、生产和销售全球优质液态饮品的创新型企业。<br><br>公司采用线上线下相结合的新型购物模式——O2O（Online To Offline）模式。自主运营线上全电商渠道，连锁加盟线下实体体验店。建立并完善线上销售、线下体验和配送的易乐众品消费圈。<br><br>公司将成为全国最大的易乐包装（bag in box）液态饮品采购、生产、销售企业。<br><br>公司同时致力于绿色环保事业，采购、生产、销售绿色环保产品；使个人、公司和社会可持续发展。</p>
+					</div>
+				</li>
+				<li class="marketing-main-bottom2">
+					<img src="img/bottom2.gif" alt="">
+				</li>
+				<li id="marketing-main-bottom3">
+					<h3>价值观</h3>
+					<div>
+						<img src="img/bottom3.gif" alt="">
+						<p>为客户的需求竭诚奉献自己的力量。<br>注重服务与沟通，塑造良好的口碑与信誉。<br>坚定目标，持之以恒，从每一天、每一个细节做起。<br>整合各种资源，为社会的可持续发展做出贡献。<br>保持一颗平常心，勤恳做事，踏实做人。</p>
+					</div>
+				</li>
+				<li id="marketing-main-bottom4">
+					<h3>易乐众品全面营销拓展模式</h3>
+				    <div>
+				    	<img src="img/bottom4.gif" alt="">
+				    	<p>了解更多</p>
+				    	<img src="img/bottom5.gif" alt="">
+				    </div>
+				</li>
+			</ul>
 		</div>
-	    <div class="news-bottom">
-		    <h2>众品新闻</h2>
-		    <ul>
-			    <li><a href="#">葡萄酒新包装“桶中袋”流行餐厅
-			    <span>2013-8-12</span></a></li>
-			    <li><a href="#">2011年中国1.9亿人饮用水有害物质含量超标
-			    <span>2013-8-12</span></a></li>
-			    <li><a href="#">全自动桶中袋流水线在瑞典投入生产
-			    <span>2013-8-12</span></a></li>
-			    <li><a href="#">康派克 发现盒中袋产品的简便优势
-			    <span>2013-8-12</span></a></li>
-			    <li><a href="#">低碳经济推动盒中袋包装的发展
-			    <span>2013-8-12</span></a></li>
-			    <li><a href="#">盒中袋包装真空无菌灌装技术及其技术优势
-			    <span>2013-8-12</span></a></li>
-			    <li><a href="#">vitop推出新品用于大容量PET饮用水瓶口HydrO Tap
-			    <span>2013-8-12</span></a></li>
-			    <li><a href="#">vitop推出新品用于大容量PET饮用水瓶口HydrO Tap
-			    <span>2013-8-12</span></a></li>
-		    </ul>
-		    <div class="content-main-page">
-			    <dl>
-				    <dd><<</dd>
-				    <dd>1</dd>
-				    <dd>2</dd>
-				    <dd>>></dd>
-			    </dl>
-		    </div>
-	    </div>
-    </div>
+	</div>
 	<div class="content-main-foot">
 		<ul>
 			<li>
@@ -98,15 +96,15 @@
 			<div class="footer-top-left">
 				<p>
 					<a href="#">>关注易乐众品</a>
-					<span><a href="">加入收藏</a></span>
+					<span><a href="#">加入收藏</a></span>
 				</p>
 				<p id="map">先下购买地图(0575-88121795)</p>
 			</div>
 			<ul>
-				<li><a href="#">众品与地球</a></li>
-				<li><a href="#">众品咨询</a></li>
-				<li><a href="#">网络地图</a></li>
-				<li><a href="#">联系我们</a></li>
+				<li><a href="contact.html">众品与地球</a></li>
+				<li><a href="news.html">众品咨询</a></li>
+				<li><a href="production_problem.html">网络地图</a></li>
+				<li><a href="call_me.html">联系我们</a></li>
 			</ul>
 		</div>
 		<p class="footer-bottom">Copyright &copy2013 易乐众品 All right reserved 技术支持：博采互动</p>
